@startuml

title __LABELDETECTOR's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace labeldetector {
      class jp.oist.abcvlib.camera.labeldetector.LabelDetectorProcessor {
          {static} - TAG : String
          - imageLabeler : ImageLabeler
          + LabelDetectorProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
          {static} - logExtrasForTesting()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace labeldetector {
      class jp.oist.abcvlib.camera.labeldetector.LabelGraphic {
          {static} - LABEL_FORMAT : String
          {static} - TEXT_SIZE : float
          - labelPaint : Paint
          - labels : List<ImageLabel>
          - textPaint : Paint
          + LabelGraphic()
          + draw()
      }
    }
  }
  

  jp.oist.abcvlib.camera.labeldetector.LabelDetectorProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase
  jp.oist.abcvlib.camera.labeldetector.LabelGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic
  jp.oist.abcvlib.camera.labeldetector.LabelGraphic o-- jp.oist.abcvlib.camera.GraphicOverlay : overlay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
